--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <header>
     <meta charset="UTF-8" />
-    <h1> 
-        <a href="/">RUN BUDDY</a>
-    </h1>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <h1>RUN BUDDY</h1>
     <nav>
         <!-- Unordered list element -->
         <ul>
@@ -24,6 +23,7 @@
             </li>
         </ul>
     </nav>
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </header>
 
 <!-- Hero/jumbotron -->
